# stl

./: .color_coded  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile
cmake/modules/: CompilerSetup.cmake
doc/: Makefile  requirements.txt
doc/doxy/namespace/: sophia.dox
doc/doxy/namespace/sophia/: concept.dox  io.dox  meta.dox
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py  index.rst  io.rst
doc/src/: conf.py  index.rst
doc/src/flow/: guard.rst  public.rst
doc/src/io/: printf.rst  public.rst
include/: sophia.h  sophia.hpp
include/concept/: io.hpp
include/io/: _ns.hpp  printf.hpp  write.hpp
include/meta/: traits.hpp  void_t.hpp
include/sophia/_internal/: ordered_evaluator.hpp
include/sophia/concept/: concept.hpp  io.hpp  type_descriptor.hpp
include/sophia/data/: string.hpp
include/sophia/flow/: flow.hpp  guard.hpp
include/sophia/internal/: ordered_evaluator.hpp
include/sophia/io/: io.hpp  printf.hpp  write.hpp
include/sophia/meta/: meta.hpp  traits.hpp  void_t.hpp
include/sophia/string/: format.hpp  string.hpp
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/flow/: guard.cpp
src/examples/io/: printf.cpp  writeln.cpp
